# ltt-cloud

./: .env.example  .gitignore  .trufflehog-ignore.txt  AUDIT_RESULTS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICKSTART.md  DIGITALOCEAN_DEPLOYMENT.md  FIXES_SUMMARY.md  LIVE_DEPLOYMENT_EXECUTION.md  MASTER_DEPLOYMENT_CHECKLIST.md  README.md  SECURITY.md  docker-compose.yml  mock_api.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.do/: app.yaml
.github/: copilot-instructions.md
.github/workflows/: deploy-knative.yml  full-ci-cd.yml  secret-scan-push.yml
docker/: Dockerfile.api  Dockerfile.dev  Dockerfile.ui
k8s/: api-deployment.yaml  api-service.yaml  ingress.yaml  knative-api.yaml  knative-ui.yaml  namespace.yaml  postgres.yaml  pwa-deployment.yaml  pwa-service.yaml  redis.yaml  secrets-template.yaml  ui-deployment.yaml  ui-service.yaml
nginx/: nginx.conf
public/: app.js  index.html  style.css
scripts/: setup_mssql_test.py
src/api/: main.py
src/api/routers/: health.py  lca.py  scenarios.py
src/ltt_core/: __init__.py  brightway_setup.py  cache.py  config.py  lca_runner.py
src/ltt_core/db/: models.py  session.py
src/pwa/: index.html  manifest.json  sw.js
src/ui/: app.py
tests/: test_api_lca.py  test_lca_runner.py
