[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ltt-cloud"
version = "0.1.0"
description = "Cloud-ready LCA dashboard for RWTH LTT"
authors = [{name = "LTT Team"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "streamlit",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "redis",
    "brightway2",
    "pydantic",
    "pydantic-settings",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88